tests/lean/patvar.lean.expected.out
patvar.lean:3:0: error: missing cases:
(List.cons _ _)
patvar.lean:10:0: error: missing cases:
(List.cons _ _)
patvar.lean:14:0: error: invalid pattern variable, must be atomic
patvar.lean:17:0: error: invalid pattern variable, must be atomic
